# feedjam

./: .env  .env.example  .env.prod.example  .gitignore  .pylintrc  Caddyfile  Dockerfile  Dockerfile.prod  README.md  alembic.ini  celerybeat-schedule.db  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  sqlite_feedjam.db
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 06224794abbf_add_new_column.py  105521347a4e_add_ranking_tables.py  4f9f1c50b6ce_initial_migration.py  60118ec288f9_add_missing_runs_columns.py  748ee5ed261a_initial_migration.py  9ca3f204295d_add_indices_for_query_optimization.py  a1b2c3d4e5f6_add_user_api_keys.py  b1e4ca13f10d_add_user_item_states_table.py  c2d5e7f8g9h0_add_user_auth_fields.py  d3e6f9a1b2c3_add_email_token.py  e4f7a2b3c4d5_add_subscription_debug_fields.py  f5g8h3i4j5k6_add_onboarding_completed.py  fae752578fd0_initial_migration.py  g6h9i4j5k6l7_add_feeditem_unique_constraint.py  h7i0j5k6l7m8_remove_user_feed_item_states.py  i8j1k6l7m8n9_add_published_to_user_feed_items.py
cloudflare-worker/: README.md  email-worker.js  wrangler.toml
docs/: BACKEND.md  DEPLOYMENT.md  FRONTEND.md  RANKING.md
feedjam.egg-info/: SOURCES.txt
model/: model.py
model/schema/: feed_schema.py  user_schema.py
repository/: db.py  feed_storage.py  run_storage.py  source_storage.py  subscription_storage.py  user_storage.py
scripts/: dev.py  lint.py
service/: data_extractor.py  feed_service.py
service/subscription/: hn_parser.py  source_parser_strategy.py  subscription_listener.py  subscription_service.py  telegram_parser.py
src/: main.py  startup_runner.py
src/__tests__/: base.py  conftest.py  data_extractor_test.py  feed_service_test.py  parser_test.py  ranking_test.py  subscripiton_test.py  telegram_extractor_test.py  telegram_parser_test.py  test_app.py  test_auth.py  worker_test.py
src/api/: exceptions.py  schemas.py
src/feedjam.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/model/: __init__.py  feed.py  source.py  subscription.py  user.py  user_feed.py  user_interest.py  (+2 more)
tasks/: worker.py
tests/: conftest.py  feed_service_test.py  parser_test.py  subscripiton_test.py  telegram_parser_test.py  test_app.py  worker_test.py
utils/: config.py  dependencies.py  logger.py  utils.py
web/: .env  .env.production  .gitignore  Dockerfile  Dockerfile.dev  docker-compose.web.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
(+126 files in other folders)
