[tool.poetry]
name = "feedjam"
version = "2.0.0"
description = "Personal feed aggregation and personalization"
authors = ["vladisov"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

# Web framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}

# Data validation
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"

# Database
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"

# Background tasks
apscheduler = "^3.10.4"
redis = "^5.2.0"

# HTTP & Parsing
httpx = "^0.28.0"
aiohttp = "^3.11.0"
beautifulsoup4 = "^4.12.3"
feedparser = "^6.0.11"
html2text = "^2024.2.26"

# AI
openai = "^2.15.0"

# Utils
python-dotenv = "^1.0.1"
python-dateutil = "^2.9.0"
requests = "^2.32.5"

# Auth
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.0.0"
email-validator = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.9.0"
httpx = "^0.28.0"
pytest-mock = "^3.15.1"
debugpy = "^1.8.19"

[tool.poetry.scripts]
dev = "scripts.dev:main"
lint = "scripts.lint:lint"
format = "scripts.lint:format_code"
lint-fix = "scripts.lint:lint_fix"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Ruff Configuration ---

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    "__pycache__",
    ".venv",
    "venv",
    ".env",
    "migrations",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "Q",      # flake8-quotes
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (needed for FastAPI Depends)
    "E712",   # comparison to True/False (needed for SQLAlchemy queries)
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["api", "model", "repository", "schemas", "service", "tasks", "utils"]

# --- Pytest Configuration ---

[tool.pytest.ini_options]
testpaths = ["src/__tests__"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
